; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_rpc-proxy-lists.c_lists_forward.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_rpc-proxy-lists.c_lists_forward.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TL_LISTS_DELETE_OBJECT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lists_forward() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 (...) @tl_fetch_lookup_int()
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @TL_LISTS_DELETE_OBJECT, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 (...) @default_query_diagonal_forward()
  store i32 %9, i32* %1, align 4
  br label %16

10:                                               ; preds = %0
  %11 = call i32 (...) @tl_fetch_mark()
  %12 = call i32 (...) @tl_fetch_int()
  %13 = call i32 (...) @tl_fetch_int()
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @default_tuple_forward_ext(i32 %14)
  store i32 %15, i32* %1, align 4
  br label %16

16:                                               ; preds = %10, %8
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @tl_fetch_lookup_int(...) #1

declare dso_local i32 @default_query_diagonal_forward(...) #1

declare dso_local i32 @tl_fetch_mark(...) #1

declare dso_local i32 @tl_fetch_int(...) #1

declare dso_local i32 @default_tuple_forward_ext(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
